Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -121,14 +121,14 @@
   "mn9:44-46.8": "Contatto attraverso l'occhio, orecchio, naso, lingua, corpo, e mente.",
   "mn9:44-46.9": "Il contatto origina dai sei campi dei sensi. Il contatto cessa quando i sei campi dei sensi cessano. La pratica che porta alla cessazione del contatto è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:48-50.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:48-50.3": "“Può esserci, reverendi.",
+  "mn9:48-50.3": "“Può esserci, Fratelli.",
   "mn9:48-50.4": "Un discepolo nobile comprende i sei campi sensoriali, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione.",
   "mn9:48-50.6": "Ma cosa sono i sei campi sensoriali? Qual'è la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione?",
   "mn9:48-50.7": "Ci sono questi sei campi dei sensi.",
   "mn9:48-50.8": "Il campo sensoriale dell'occhio, orecchio, naso, lingua, corpo, e mente.",
   "mn9:48-50.9": "I sei campi dei sensi originano da nome e forma. I sei campi dei sensi cessano quando nome e forma cessano. La pratica che porta alla cessazione dei sei campi dei sensi è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:52-54.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:52-54.3": "“Può esserci, reverendi.",
+  "mn9:52-54.3": "“Può esserci, Fratelli.",
   "mn9:52-54.4": "Un discepolo nobile comprende nome e forma, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione.",
   "mn9:52-54.6": "Ma cosa sono nome e forma? Qual'è la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione?",
   "mn9:52-54.7": "Sensazione, percezione, volontà, contatto, ed attenzione—",
