--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -152,7 +152,7 @@
   "mn9:60-62.9": "Intenzione di corpo, parole, e mente.",
   "mn9:60-62.10": "L'intenzione origina dall'ignoranza. L'intenzione cessa quando l'ignoranza cessa. La pratica che porta alla cessazione dell'intenzione è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:64-66.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:64-66.3": "“Può esserci, reverendi.",
+  "mn9:64-66.3": "“Può esserci, Fratelli.",
   "mn9:64-66.4": "Un discepolo nobile comprende l'ignoranza, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:64-66.6": "Ma cos'è l'ignoranza? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:64-66.7": "Non comprendere la sofferenza, l'origine della sofferenza, la cessazione della sofferenza, e la pratica che porta alla cessazione della sofferenza.",
@@ -160,7 +160,7 @@
   "mn9:64-66.9": "L'ignoranza origina dai contaminanti. L'ignoranza cessa quando i contaminanti cessano. La pratica che porta alla cessazione dell'ignoranza è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:68.1": "Dicendo “Bene, Fratello,” quei mendicanti approvarono e concordarono con ciò che Sāriputta disse. Poi fecero un'altra domanda:",
   "mn9:68.2": "“Ma Fratello, potrebbe esserci un altro modo di descrivere un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento?”",
-  "mn9:69.1": "“Può esserci, reverendi.",
+  "mn9:69.1": "“Può esserci, Fratelli.",
   "mn9:69.2": "Un discepolo nobile comprende i contaminanti, la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione.",
   "mn9:69.3": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.",
   "mn9:70.1": "Ma cosa sono i contaminanti? Qual'è la loro origine, la loro cessazione, e la pratica che porta alla loro cessazione?",
