--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -70,7 +70,7 @@
   "mn14:15.1": "Mahānāma, una volta mi trovavo vicino a Rājagaha, sulla Montagna del Picco dell'Avvoltoio.",
   "mn14:15.2": "In quell'occasione, sui pendii di Isigili presso la Roccia Nera, vari asceti Giainisti rimanevano costantemente in piedi, rifiutandosi di sedersi. E provavano sensazioni dolorose, pungenti, severe, e acute a causa del sovraffaticamento.",
   "mn14:16.1": "Poi nel tardo pomeriggio, io uscii da ritiro e andai alla Roccia Nera a visitare quegli asceti Giainisti. Dissi loro,",
-  "mn14:16.2": "‘Reverendi, perché rimanete costantemente in piedi, rifiutandovi di sedervi, così da provare sensazioni dolorose, pungenti, severe, e acute a causa del sovraffaticamento?’",
+  "mn14:16.2": "‘Fratelli, perché rimanete costantemente in piedi, rifiutandovi di sedervi, così da provare sensazioni dolorose, pungenti, severe, e acute a causa del sovraffaticamento?’",
   "mn14:17.1": "Detto ciò, quegli asceti Giainisti mi dissero,",
   "mn14:17.2": "‘Fratello, il capo Giainista Nātaputta dice di essere onnisciente ed onniveggente, di sapere e vedere ogni cosa senza eccezione, così:",
   "mn14:17.3": "“Conoscenza e visione sono continuamente presenti in me, mentre cammino, sto in piedi, dormo, e sono sveglio.”",
