Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn3_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn3_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn3_translation-it-giovannizappa.json
@@ -52,7 +52,7 @@
   "mn3:4.1": "Questo è ciò che il Buddha disse.",
   "mn3:4.2": "Detto ciò, il Santo si alzò dal proprio posto ed entrò nel proprio alloggio.",
   "mn3:4.3": "Poi poco dopo che il Buddha se ne andò, il Venerabile Sāriputta disse ai mendicanti,",
-  "mn3:4.4": "“Reverendi, mendicanti!”",
+  "mn3:4.4": "“Fratelli, mendicanti!”",
   "mn3:4.5": "“Reverendo,” risposero i mendicanti.",
   "mn3:4.6": "Sāriputta disse:",
   "mn3:5.1": "“Reverendi, come fanno i discepoli di un Maestro che vive in isolamento a non addestrarsi all'isolamento?”",
