--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -4,7 +4,7 @@
   "mn5:1.1": "Così ho sentito.",
   "mn5:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn5:1.3": "Poi Sāriputta si rivolse ai mendicanti:",
-  "mn5:1.4": "“Fratelli, mendicanti!”",
+  "mn5:1.4": "“Fratelli mendicanti!”",
   "mn5:1.5": "“Reverendo,” risposero i mendicanti.",
   "mn5:1.6": "Sāriputta disse:",
   "mn5:2.1": "“Mendicanti, nel mondo si trovano queste quattro persone.",
