--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -81,7 +81,7 @@
   "mn14:17.8": "Non rimanendo niente per il futuro, le azioni vengono eliminate. Con l'eliminazione delle azioni, la sofferenza viene eliminata. Con l'eliminazione della sofferenza, le sensazioni vengono eliminate. E con l'eliminazione delle sensazioni, ogni sofferenza sarà espiata.”",
   "mn14:17.9": "A noi piace questo e lo accettiamo, e ne siamo soddisfatti.’",
   "mn14:18.1": "Detto ciò, io dissi loro,",
-  "mn14:18.2": "‘Ma reverendi, voi sapete",
+  "mn14:18.2": "‘Ma Fratelli, voi sapete",
   "mn14:18.3": "per certo che siete esisti in passato, e che non è vero che non siete esistiti?’",
   "mn14:18.4": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.5": "‘Ma reverendi, voi sapete",
