--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -84,10 +84,10 @@
   "mn14:18.2": "‘Ma Fratelli, voi sapete",
   "mn14:18.3": "per certo che siete esisti in passato, e che non è vero che non siete esistiti?’",
   "mn14:18.4": "‘No non lo sappiamo, Fratello.’",
-  "mn14:18.5": "‘Ma reverendi, voi sapete",
+  "mn14:18.5": "‘Ma Fratelli, voi sapete",
   "mn14:18.6": "per certo che avete compito cattive azioni in passato?’",
   "mn14:18.7": "‘No non lo sappiamo, Fratello.’",
-  "mn14:18.8": "‘Ma reverendi, voi sapete",
+  "mn14:18.8": "‘Ma Fratelli, voi sapete",
   "mn14:18.9": "che avete compiuto questa o quella cattiva azione?’",
   "mn14:18.10": "‘No non lo sappiamo, Fratello.’",
   "mn14:18.11": "‘Ma reverendi, voi sapete",
