--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -107,7 +107,7 @@
   "mn14:20.10": "Ma si dimentichi di quello. Ora chiediamo al Venerabile Gotama:",
   "mn14:20.11": "“Chi vive tra più piacere, il Re Bimbisāra o il Venerabile Gotama?”’",
   "mn14:21.1": "‘Beh, Fratelli, vi chiedo questo, e potete rispondere come volete.",
-  "mn14:21.2": "Cosa ne pensate, reverendi?",
+  "mn14:21.2": "Cosa ne pensate, Fratelli?",
   "mn14:21.3": "Il Re Bimbisāra è capace di provare gioia perfetta per sette giorni e notti senza muovere il corpo o parlare?’",
   "mn14:21.4": "‘No non lo è, Fratello.’",
   "mn14:21.6": "Il Re Bimbisāra è capace di provare gioia perfetta per sei giorni ...",
@@ -124,7 +124,7 @@
   "mn14:21.17": "cinque giorni ...",
   "mn14:21.18": "sei giorni ...",
   "mn14:21.19": "sette giorni.",
-  "mn14:21.20": "Cosa ne pensate, reverendi? Essendo così, chi vive tra più piacere, il Re Bimbisāra o io?’",
+  "mn14:21.20": "Cosa ne pensate, Fratelli? Essendo così, chi vive tra più piacere, il Re Bimbisāra o io?’",
   "mn14:21.21": "‘Essendo così, il Venerabile Gotama vive tra più piacere del Re Bimbisāra.’”",
   "mn14:21.22": "Questo è ciò che il Buddha disse.",
   "mn14:21.23": "Soddisfatto, Mahācunda il Sakya fu contento di ciò che il Buddha disse."
