Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -14,5 +14,6 @@
   "mn18:4.2": "Questo è ciò che insegno, e questo è ciò che spiego.”",
   "mn18:5.1": "Detto ciò, Daṇḍapāṇi scosse la testa, schioccò la lingua, alzò le sopracciglia al punto che la sua fronte si raggrinzì in tre solchi, e poi se ne andò appoggiandosi al proprio bastone.",
   "mn18:6.1": "Poi nel tardo pomeriggio, il Buddha uscì da ritiro ed andò al Monastero dell'Albero di Banyan, si sedette sul posto preparato,",
-  "mn18:6.2": "e disse ai mendicanti ciò che era successo."
+  "mn18:6.2": "e disse ai mendicanti ciò che era successo.",
+  "mn18:6.14": "Detto ciò, uno dei mendicanti gli disse,"
 }
