Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -15,5 +15,6 @@
   "mn18:5.1": "Detto ciò, Daṇḍapāṇi scosse la testa, schioccò la lingua, alzò le sopracciglia al punto che la sua fronte si raggrinzì in tre solchi, e poi se ne andò appoggiandosi al proprio bastone.",
   "mn18:6.1": "Poi nel tardo pomeriggio, il Buddha uscì da ritiro ed andò al Monastero dell'Albero di Banyan, si sedette sul posto preparato,",
   "mn18:6.2": "e disse ai mendicanti ciò che era successo.",
-  "mn18:6.14": "Detto ciò, uno dei mendicanti gli disse,"
+  "mn18:6.14": "Detto ciò, uno dei mendicanti gli disse,",
+  "mn18:7.1": "“Ma Signore, qual’è l'insegnamento affinché il Buddha non entri in conflitto con nessuno al mondo con i suoi dei, diavoli, e divinità, questa popolazione con i suoi asceti e bramini, dei e umani?"
 }
