--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -18,5 +18,6 @@
   "mn18:6.14": "Detto ciò, uno dei mendicanti gli disse,",
   "mn18:7.1": "“Ma Signore, qual’è l'insegnamento affinché il Buddha non entri in conflitto con nessuno al mondo con i suoi dei, diavoli, e divinità, questa popolazione con i suoi asceti e bramini, dei e umani?",
   "mn18:7.2": "E com’è possibile che certe percezioni non sorgano nel bramino che vive distaccato dai piaceri dei sensi, senza dubbio, spogliato dalla preoccupazione, e libero dalla voglia di rinascere in questo o quello stato?”",
-  "mn18:8.1": "“Mendicante, una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni."
+  "mn18:8.1": "“Mendicante, una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni.",
+  "mn18:8.2": "Se non trova niente che valga la pena approvare, accogliere, o a cui attaccarsi nella fonte da cui queste sorgono,"
 }
