--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -20,5 +20,6 @@
   "mn18:7.2": "E com’è possibile che certe percezioni non sorgano nel bramino che vive distaccato dai piaceri dei sensi, senza dubbio, spogliato dalla preoccupazione, e libero dalla voglia di rinascere in questo o quello stato?”",
   "mn18:8.1": "“Mendicante, una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni.",
   "mn18:8.2": "Se non trova niente che valga la pena approvare, accogliere, o a cui attaccarsi nella fonte da cui queste sorgono,",
-  "mn18:8.3": "proprio questa è la fine delle tendenze latenti al desiderio, repulsione, opinioni, dubbio, presunzione, desiderio di esistere, e ignoranza. Proprio questa è la fine del prendere bastone e spada, la fine dei bisticci, discussioni, e litigi, di accuse, linguaggio divisivo, e bugie."
+  "mn18:8.3": "proprio questa è la fine delle tendenze latenti al desiderio, repulsione, opinioni, dubbio, presunzione, desiderio di esistere, e ignoranza. Proprio questa è la fine del prendere bastone e spada, la fine dei bisticci, discussioni, e litigi, di accuse, linguaggio divisivo, e bugie.",
+  "mn18:8.4": "Qui è dove queste qualità cattive e malsane cessano senza che ne rimanga nulla"
 }
