--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -22,5 +22,6 @@
   "mn18:8.2": "Se non trova niente che valga la pena approvare, accogliere, o a cui attaccarsi nella fonte da cui queste sorgono,",
   "mn18:8.3": "proprio questa è la fine delle tendenze latenti al desiderio, repulsione, opinioni, dubbio, presunzione, desiderio di esistere, e ignoranza. Proprio questa è la fine del prendere bastone e spada, la fine dei bisticci, discussioni, e litigi, di accuse, linguaggio divisivo, e bugie.",
   "mn18:8.4": "Qui è dove queste qualità cattive e malsane cessano senza che ne rimanga nulla",
-  "mn18:9.1": "Questo è ciò che il Buddha disse."
+  "mn18:9.1": "Questo è ciò che il Buddha disse.",
+  "mn18:9.2": "Detto ciò, il Santo si alzò dal proprio posto ed entrò nel proprio alloggio."
 }
