--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn18:8.3": "proprio questa è la fine delle tendenze latenti al desiderio, repulsione, opinioni, dubbio, presunzione, desiderio di esistere, e ignoranza. Proprio questa è la fine del prendere bastone e spada, la fine dei bisticci, discussioni, e litigi, di accuse, linguaggio divisivo, e bugie.",
   "mn18:8.4": "Qui è dove queste qualità cattive e malsane cessano senza che ne rimanga nulla",
   "mn18:9.1": "Questo è ciò che il Buddha disse.",
-  "mn18:9.2": "Detto ciò, il Santo si alzò dal proprio posto ed entrò nel proprio alloggio."
+  "mn18:9.2": "Detto ciò, il Santo si alzò dal proprio posto ed entrò nel proprio alloggio.",
+  "mn18:10.1": "Poco dopo che il Buddha se ne era andato, quei mendicanti considerarono:"
 }
