--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -27,5 +27,6 @@
   "mn18:10.1": "Poco dopo che il Buddha se ne era andato, quei mendicanti considerarono:",
   "mn18:10.2": "“Il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio.",
   "mn18:10.7": "Chi può spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha?”",
-  "mn18:10.8": "Allora quei mendicanti pensarono:"
+  "mn18:10.8": "Allora quei mendicanti pensarono:",
+  "mn18:10.9": "“Il Venerabile Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali."
 }
