Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -28,5 +28,6 @@
   "mn18:10.2": "“Il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio.",
   "mn18:10.7": "Chi può spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha?”",
   "mn18:10.8": "Allora quei mendicanti pensarono:",
-  "mn18:10.9": "“Il Venerabile Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali."
+  "mn18:10.9": "“Il Venerabile Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali.",
+  "mn18:10.10": "È in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha."
 }
