--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -29,5 +29,6 @@
   "mn18:10.7": "Chi può spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha?”",
   "mn18:10.8": "Allora quei mendicanti pensarono:",
   "mn18:10.9": "“Il Venerabile Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali.",
-  "mn18:10.10": "È in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha."
+  "mn18:10.10": "È in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha.",
+  "mn18:10.11": "Andiamo da lui, e chiediamogli riguardo a questo.”"
 }
