Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -30,5 +30,6 @@
   "mn18:10.8": "Allora quei mendicanti pensarono:",
   "mn18:10.9": "“Il Venerabile Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali.",
   "mn18:10.10": "È in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha.",
-  "mn18:10.11": "Andiamo da lui, e chiediamogli riguardo a questo.”"
+  "mn18:10.11": "Andiamo da lui, e chiediamogli riguardo a questo.”",
+  "mn18:11.1": "Allora quei mendicanti andarono da Mahākaccāna, e ci scambiarono saluti."
 }
