--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -32,5 +32,6 @@
   "mn18:10.10": "È in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha.",
   "mn18:10.11": "Andiamo da lui, e chiediamogli riguardo a questo.”",
   "mn18:11.1": "Allora quei mendicanti andarono da Mahākaccāna, e ci scambiarono saluti.",
-  "mn18:11.2": "Una volta che i saluti e cordialità terminarono, si sedettero a lato. Gli racontarono quello che era successo, e dissero:"
+  "mn18:11.2": "Una volta che i saluti e cordialità terminarono, si sedettero a lato. Gli racontarono quello che era successo, e dissero:",
+  "mn18:11.18": "“Che il Venerabile Mahākaccāna per favore spieghi questo.”"
 }
