--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -33,5 +33,6 @@
   "mn18:10.11": "Andiamo da lui, e chiediamogli riguardo a questo.”",
   "mn18:11.1": "Allora quei mendicanti andarono da Mahākaccāna, e ci scambiarono saluti.",
   "mn18:11.2": "Una volta che i saluti e cordialità terminarono, si sedettero a lato. Gli racontarono quello che era successo, e dissero:",
-  "mn18:11.18": "“Che il Venerabile Mahākaccāna per favore spieghi questo.”"
+  "mn18:11.18": "“Che il Venerabile Mahākaccāna per favore spieghi questo.”",
+  "mn18:12.1": "“Fratelli, immaginate una persona che ha bisogno di durame. Vagando alla ricerca di durame si imbatte in un grosso albero pieno di durame. Ma tralascia le radici e il tronco, immaginando che il durame si trovi nei rami e nelle foglie."
 }
