Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -35,5 +35,6 @@
   "mn18:11.2": "Una volta che i saluti e cordialità terminarono, si sedettero a lato. Gli racontarono quello che era successo, e dissero:",
   "mn18:11.18": "“Che il Venerabile Mahākaccāna per favore spieghi questo.”",
   "mn18:12.1": "“Fratelli, immaginate una persona che ha bisogno di durame. Vagando alla ricerca di durame si imbatte in un grosso albero pieno di durame. Ma tralascia le radici e il tronco, immaginando che il durame si trovi nei rami e nelle foglie.",
-  "mn18:12.2": "Questa è la situazione dei venerabili. Sebbene foste faccia a faccia col Buddha, lo avete tralasciato, immaginando di dover chiedere a me riguardo a questo."
+  "mn18:12.2": "Questa è la situazione dei venerabili. Sebbene foste faccia a faccia col Buddha, lo avete tralasciato, immaginando di dover chiedere a me riguardo a questo.",
+  "mn18:12.3": "Poiché lui è il Buddha, che sa e che vede. È visione, conoscenza, verità, santità. È il Maestro, il proclamatore, il delucidatore del significato, il donatore della libertà dalla morte, il Signore della verità, il Realizzato."
 }
