--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -42,5 +42,6 @@
   "mn18:13.1": "“Certamente lui è il Buddha, che sa e che vede. È visione, conoscenza, verità, santità. È il Maestro, il proclamatore, il delucidatore del significato, il donatore della libertà dalla morte, il Signore della verità, il Realizzato.",
   "mn18:13.2": "Quello era il momento di andare dal Buddha e chiedergli riguardo a questo.",
   "mn18:13.3": "Avremmo dovuto ricordarlo secondo la risposta del Buddha.",
-  "mn18:13.4": "Ma comunque, Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali."
+  "mn18:13.4": "Ma comunque, Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali.",
+  "mn18:13.5": "Sei in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha."
 }
