--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -43,5 +43,6 @@
   "mn18:13.2": "Quello era il momento di andare dal Buddha e chiedergli riguardo a questo.",
   "mn18:13.3": "Avremmo dovuto ricordarlo secondo la risposta del Buddha.",
   "mn18:13.4": "Ma comunque, Mahākaccāna è lodato dal Buddha e stimato dai suoi compagni spirituali.",
-  "mn18:13.5": "Sei in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha."
+  "mn18:13.5": "Sei in grado di spiegare in dettaglio il significato di questo breve passaggio da recitare dato dal Buddha.",
+  "mn18:13.6": "Per favore spiegalo, se non è un problema.”"
 }
