--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -47,5 +47,6 @@
   "mn18:13.6": "Per favore spiegalo, se non è un problema.”",
   "mn18:14.1": "“Beh allora, Fratelli, ascoltate e prestate attenzione, ora parlo.”",
   "mn18:14.2": "\"Sì, Fratello,\" risposero i mendicanti.",
-  "mn18:14.3": "il Venerabile Mahākaccāna disse:"
+  "mn18:14.3": "il Venerabile Mahākaccāna disse:",
+  "mn18:15.1": "“Fratelli, il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio:"
 }
