--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -48,5 +48,6 @@
   "mn18:14.1": "“Beh allora, Fratelli, ascoltate e prestate attenzione, ora parlo.”",
   "mn18:14.2": "\"Sì, Fratello,\" risposero i mendicanti.",
   "mn18:14.3": "il Venerabile Mahākaccāna disse:",
-  "mn18:15.1": "“Fratelli, il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio:"
+  "mn18:15.1": "“Fratelli, il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio:",
+  "mn18:15.2": "“Una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni."
 }
