Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -49,5 +49,6 @@
   "mn18:14.2": "\"Sì, Fratello,\" risposero i mendicanti.",
   "mn18:14.3": "il Venerabile Mahākaccāna disse:",
   "mn18:15.1": "“Fratelli, il Buddha ha dato questo breve passaggio da recitare, e poi è entrato nel proprio alloggio senza spiegarne il significato in dettaglio:",
-  "mn18:15.2": "“Una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni."
+  "mn18:15.2": "“Una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni.",
+  "mn18:15.3": "Se non trova niente che valga la pena approvare, accogliere, o a cui attaccarsi nella fonte da cui queste sorgono …"
 }
