--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -55,5 +55,6 @@
   "mn18:16.1": "La coscienza dell’occhio sorge in dipendenza dell'occhio e delle viste. L’incontro dei tre è il contatto. Il contatto è condizione per la sensazione. Ciò che provi, percepisci. Riguardo ciò che percepisci, ci pensi, proliferi. Ciò che proliferi è la fonte da cui una persona è assalita da concetti d’identità che emergono dalla proliferazione delle percezioni. Questo accade per le viste percepite dall'occhio in passato, nel futuro, e nel presente.",
   "mn18:16.2": "La coscienza dell’orecchio sorge in dipendenza dell'orecchio e dei suoni. …",
   "mn18:16.3": "La coscienza del naso sorge in dipendenza del naso e degli odori. …",
-  "mn18:16.4": "La coscienza della lingua sorge in dipendenza della lingua e dei sapori. …"
+  "mn18:16.4": "La coscienza della lingua sorge in dipendenza della lingua e dei sapori. …",
+  "mn18:16.5": "La coscienza del corpo sorge in dipendenza del copro e dei tatti. …"
 }
