--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -59,5 +59,5 @@
   "mn18:16.5": "La coscienza del corpo sorge in dipendenza del copro e dei tatti. …",
   "mn18:16.6": "La coscienza della mente sorge in dipendenza della mente e dei pensieri. L’incontro dei tre è il contatto. Il contatto è condizione per la sensazione. Ciò che provi, percepisci. Riguardo ciò che percepisci, ci pensi, proliferi. Ciò che proliferi è la fonte da cui una persona è assalita da concetti d’identità che emergono dalla proliferazione delle percezioni. Questo accade per i pensieri percepiti dalla mente in passato, nel futuro, e nel presente.",
   "mn18:17.1": "Quando c’è l’occhio, le viste e la coscienza dell’occhio, è possibile indicare ciò che viene chiamato ‘contatto’.",
-  "mn18:17.2": "Quando c’è ciò che viene chiamato ‘contatto’, è possibile indicare ciò che viene chiamato ‘sensazione’."
+  "mn18:17.2": "Quando c’è ciò che viene chiamato contatto, è possibile indicare ciò che viene chiamato ‘sensazione’."
 }
