Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -61,5 +61,6 @@
   "mn18:17.1": "Quando c’è l’occhio, le viste e la coscienza dell’occhio, è possibile indicare ciò che viene chiamato ‘contatto’.",
   "mn18:17.2": "Quando c’è ciò che viene chiamato contatto, è possibile indicare ciò che viene chiamato ‘sensazione’.",
   "mn18:17.3": "Quando c’è ciò che viene chiamato sensazione, è possibile indicare ciò che viene chiamato ‘percezione’.",
-  "mn18:17.4": "Quando c’è ciò che viene chiamato percezione, è possibile indicare ciò che viene chiamato ‘pensiero’."
+  "mn18:17.4": "Quando c’è ciò che viene chiamato percezione, è possibile indicare ciò che viene chiamato ‘pensiero’.",
+  "mn18:17.5": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’"
 }
