--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -62,5 +62,6 @@
   "mn18:17.2": "Quando c’è ciò che viene chiamato contatto, è possibile indicare ciò che viene chiamato ‘sensazione’.",
   "mn18:17.3": "Quando c’è ciò che viene chiamato sensazione, è possibile indicare ciò che viene chiamato ‘percezione’.",
   "mn18:17.4": "Quando c’è ciò che viene chiamato percezione, è possibile indicare ciò che viene chiamato ‘pensiero’.",
-  "mn18:17.5": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’"
+  "mn18:17.5": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
+  "mn18:17.6": "Quando c’è l’orecchio …"
 }
