Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -66,5 +66,6 @@
   "mn18:17.6": "Quando c’è l’orecchio …",
   "mn18:17.7": "naso …",
   "mn18:17.8": "lingua …",
-  "mn18:17.9": "corpo …"
+  "mn18:17.9": "corpo …",
+  "mn18:17.10": "la mente, i pensieri, e la coscienza della mente, è possibile indicare ciò che viene chiamato ‘contatto’."
 }
