Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -67,5 +67,6 @@
   "mn18:17.7": "naso …",
   "mn18:17.8": "lingua …",
   "mn18:17.9": "corpo …",
-  "mn18:17.10": "la mente, i pensieri, e la coscienza della mente, è possibile indicare ciò che viene chiamato ‘contatto’. …"
+  "mn18:17.10": "la mente, i pensieri, e la coscienza della mente, è possibile indicare ciò che viene chiamato ‘contatto’. …",
+  "mn18:17.14": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’"
 }
