Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -71,5 +71,6 @@
   "mn18:17.14": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
   "mn18:18.1": "Quando non c’è l’occhio, non ci sono le viste, e non c'è la coscienza dell’occhio, non è possibile indicare ciò che viene chiamato ‘contatto’.",
   "mn18:18.2": "Quando non c’è ciò che viene chiamato contatto, non è possibile indicare ciò che viene chiamato ‘sensazione’.",
-  "mn18:18.3": "Quando non c’è ciò che viene chiamato sensazione, non è possibile indicare ciò che viene chiamato ‘percezione’."
+  "mn18:18.3": "Quando non c’è ciò che viene chiamato sensazione, non è possibile indicare ciò che viene chiamato ‘percezione’.",
+  "mn18:18.4": "Quando non c’è ciò che viene chiamato percezione, non è possibile indicare ciò che viene chiamato ‘pensiero’."
 }
