Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -73,5 +73,6 @@
   "mn18:18.2": "Quando non c’è ciò che viene chiamato contatto, non è possibile indicare ciò che viene chiamato ‘sensazione’.",
   "mn18:18.3": "Quando non c’è ciò che viene chiamato sensazione, non è possibile indicare ciò che viene chiamato ‘percezione’.",
   "mn18:18.4": "Quando non c’è ciò che viene chiamato percezione, non è possibile indicare ciò che viene chiamato ‘pensiero’.",
-  "mn18:18.5": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’"
+  "mn18:18.5": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
+  "mn18:18.6": "Quando non c’è l’orecchio …"
 }
