--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -76,5 +76,6 @@
   "mn18:18.5": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
   "mn18:18.6": "Quando non c’è l’orecchio …",
   "mn18:18.7": "il naso …",
-  "mn18:18.8": "la lingua …"
+  "mn18:18.8": "la lingua …",
+  "mn18:18.9": "il corpo …"
 }
