--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -77,5 +77,6 @@
   "mn18:18.6": "Quando non c’è l’orecchio …",
   "mn18:18.7": "il naso …",
   "mn18:18.8": "la lingua …",
-  "mn18:18.9": "il corpo …"
+  "mn18:18.9": "il corpo …",
+  "mn18:18.10": "la mente, non ci sono i pensieri, e non c'è la coscienza della mente, non è possibile indicare ciò che viene chiamato ‘contatto’. …"
 }
