--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -79,5 +79,6 @@
   "mn18:18.8": "la lingua …",
   "mn18:18.9": "il corpo …",
   "mn18:18.10": "la mente, non ci sono i pensieri, e non c'è la coscienza della mente, non è possibile indicare ciò che viene chiamato ‘contatto’. …",
-  "mn18:18.14": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’"
+  "mn18:18.14": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
+  "mn18:19.1": "Questo è come capisco in dettaglio il significato di questo passaggio da recitare."
 }
