Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -82,5 +82,6 @@
   "mn18:18.14": "Quando non c’è ciò che viene chiamato pensiero, non è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
   "mn18:19.1": "Questo è come capisco in dettaglio il significato di questo passaggio da recitare.",
   "mn18:19.4": "Se lo volete, potete andare dal Buddha e chiedergli riguardo a questo.",
-  "mn18:19.5": "Dovete ricordarlo secondo la risposta del Buddha.”"
+  "mn18:19.5": "Dovete ricordarlo secondo la risposta del Buddha.”",
+  "mn18:20.1": "“Sì, Fratello,” dissero quei mendicanti, approvando e concordando con ciò che Mahākaccāna disse. Poi si alzarono dai propri posti e andarono dal Buddha, si inchinarono, si sedettero a lato, e gli raccontarono quello che era accaduto. Poi dissero:"
 }
