--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -83,5 +83,6 @@
   "mn18:19.1": "Questo è come capisco in dettaglio il significato di questo passaggio da recitare.",
   "mn18:19.4": "Se lo volete, potete andare dal Buddha e chiedergli riguardo a questo.",
   "mn18:19.5": "Dovete ricordarlo secondo la risposta del Buddha.”",
-  "mn18:20.1": "“Sì, Fratello,” dissero quei mendicanti, approvando e concordando con ciò che Mahākaccāna disse. Poi si alzarono dai propri posti e andarono dal Buddha, si inchinarono, si sedettero a lato, e gli raccontarono quello che era accaduto. Poi dissero:"
+  "mn18:20.1": "“Sì, Fratello,” dissero quei mendicanti, approvando e concordando con ciò che Mahākaccāna disse. Poi si alzarono dai propri posti e andarono dal Buddha, si inchinarono, si sedettero a lato, e gli raccontarono quello che era accaduto. Poi dissero:",
+  "mn18:20.17": "“Mahākaccāna ci ha spiegato chiaramente il significato in questa maniera, con queste parole e frasi.”"
 }
