--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -85,5 +85,6 @@
   "mn18:19.5": "Dovete ricordarlo secondo la risposta del Buddha.”",
   "mn18:20.1": "“Sì, Fratello,” dissero quei mendicanti, approvando e concordando con ciò che Mahākaccāna disse. Poi si alzarono dai propri posti e andarono dal Buddha, si inchinarono, si sedettero a lato, e gli raccontarono quello che era accaduto. Poi dissero:",
   "mn18:20.17": "“Mahākaccāna ci ha spiegato chiaramente il significato in questa maniera, con queste parole e frasi.”",
-  "mn18:21.1": "“Mahākaccāna è astuto, mendicanti, possiede grande saggezza."
+  "mn18:21.1": "“Mahākaccāna è astuto, mendicanti, possiede grande saggezza.",
+  "mn18:21.2": "Se foste venuti da me e mi aveste posto questa domanda, avrei risposto esattamente allo stesso modo di Mahākaccāna."
 }
