--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -87,5 +87,6 @@
   "mn18:20.17": "“Mahākaccāna ci ha spiegato chiaramente il significato in questa maniera, con queste parole e frasi.”",
   "mn18:21.1": "“Mahākaccāna è astuto, mendicanti, possiede grande saggezza.",
   "mn18:21.2": "Se foste venuti da me e mi aveste posto questa domanda, avrei risposto esattamente allo stesso modo di Mahākaccāna.",
-  "mn18:21.3": "Questo è ciò che significa, e dovete ricordarlo così.”"
+  "mn18:21.3": "Questo è ciò che significa, e dovete ricordarlo così.”",
+  "mn18:22.1": "Detto ciò, il Venerabile Ānanda disse al Buddha:"
 }
