--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -88,5 +88,6 @@
   "mn18:21.1": "“Mahākaccāna è astuto, mendicanti, possiede grande saggezza.",
   "mn18:21.2": "Se foste venuti da me e mi aveste posto questa domanda, avrei risposto esattamente allo stesso modo di Mahākaccāna.",
   "mn18:21.3": "Questo è ciò che significa, e dovete ricordarlo così.”",
-  "mn18:22.1": "Detto ciò, il Venerabile Ānanda disse al Buddha:"
+  "mn18:22.1": "Detto ciò, il Venerabile Ānanda disse al Buddha:",
+  "mn18:22.2": "“Signore, immagini una persona debole dalla fame che riceve una torta al miele. Dovunque la assaggi, ne apprezzerebbe il sapore dolce e delizioso."
 }
