--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -64,7 +64,7 @@
   "mn18:17.4": "Quando c’è ciò che viene chiamato percezione, è possibile indicare ciò che viene chiamato ‘pensiero’.",
   "mn18:17.5": "Quando c’è ciò che viene chiamato pensiero, è possibile indicare ciò che viene chiamato ‘essere assaliti da concetti d’identità che emergono dalla proliferazione delle percezioni.’",
   "mn18:17.6": "Quando c’è l’orecchio …",
-  "mn18:17.7": "naso …",
+  "mn18:17.7": "il naso …",
   "mn18:17.8": "lingua …",
   "mn18:17.9": "il corpo …",
   "mn18:17.10": "la mente, i pensieri, e la coscienza della mente, è possibile indicare ciò che viene chiamato ‘contatto’. …",
