Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -115,5 +115,6 @@
   "sn-blurbs:sn3": "Os “Discursos Conectados com os Cossalanos” contêm 25 discursos retratando o Rei Pasenadi de Côssala. Pasenadi brilha como uma personagem complexa, com pequenos defeitos e tolo, mas com grande devoção e potencial de crescimento. Ele aparece frequentemente em outros suttas. No MN 87 é contada a história de como a Rainha Mallikā o introduziu ao Dhamma. Mallikā reaparece neste discurso e, no SN 3.8, ela mostra como não tem medo de desafiar o rei. Em geral, os suttas desta coleção incorporam os versos em prosa cujas narrativas ilustram as lutas e os problemas por que passa um rei desejoso de seguir o Dhamma e que, no entanto, deve reger em um mundo com espiões, sacrifícios, punições, guerras e as numerosas tentações da vida de um monarca.",
   "sn-blurbs:sn3.1": "O Rei Pasenadi encontra o Buda pela primeira vez. Ele se pergunta como o Buda pode afirmar ter despertado mesmo sendo tão jovem. O Buda lhe ensina as quatro coisas que não devem ser desprezadas em virtude de sua juventude.",
   "sn-blurbs:sn3.2": "Pasenadi indaga sobre coisas que causam o sofrimento quando surgem dentro de si.",
-  "sn-blurbs:sn3.3": "Pasenadi pergunta se algo que nasceu pode escapar da velhice e da morte."
+  "sn-blurbs:sn3.3": "Pasenadi pergunta se algo que nasceu pode escapar da velhice e da morte.",
+  "sn-blurbs:sn3.4": "Ao relatar uma reflexão que lhe ocorrera durante um retiro, Pasenadi diz que os que praticam maus atos tratam a si como inimigos. O Buda expressa concordância em versos."
 }
