Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -116,5 +116,6 @@
   "sn-blurbs:sn3.1": "O Rei Pasenadi encontra o Buda pela primeira vez. Ele se pergunta como o Buda pode afirmar ter despertado mesmo sendo tão jovem. O Buda lhe ensina as quatro coisas que não devem ser desprezadas em virtude de sua juventude.",
   "sn-blurbs:sn3.2": "Pasenadi indaga sobre coisas que causam o sofrimento quando surgem dentro de si.",
   "sn-blurbs:sn3.3": "Pasenadi pergunta se algo que nasceu pode escapar da velhice e da morte.",
-  "sn-blurbs:sn3.4": "Ao relatar uma reflexão que lhe ocorrera durante um retiro, Pasenadi diz que os que praticam maus atos tratam a si como inimigos. O Buda expressa concordância em versos."
+  "sn-blurbs:sn3.4": "Ao relatar uma reflexão que lhe ocorrera durante um retiro, Pasenadi diz que os que praticam maus atos tratam a si como inimigos. O Buda expressa concordância em versos.",
+  "sn-blurbs:sn3.5": "Ainda que protegido por um exército, quem pratica maus atos está desprotegido."
 }
