Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -130,5 +130,6 @@
   "mn1:28-49.16": "જોએલાને જોએલું …",
   "mn1:28-49.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:28-49.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:28-49.19": "જાણેલાને જાણેલુ …"
+  "mn1:28-49.19": "જાણેલાને જાણેલુ …",
+  "mn1:28-49.20": "એકતાને એકતા …"
 }
