Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -839,9 +839,9 @@
   "pli-tv-kd2:27.1.13": "‘Yes, I recognize it.’ —",
   "pli-tv-kd2:27.1.14": "‘You should restrain yourself in the future.’ ",
   "pli-tv-kd2:27.2.1": "On the observance day, it may be that a monk is unsure if he’s committed an offense. ",
-  "pli-tv-kd2:27.2.2": "He should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
+  "pli-tv-kd2:27.2.2": "He should approach a monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd2:27.2.3": "‘I’m unsure if I’ve committed such-and-such an offense. ",
-  "pli-tv-kd2:27.2.4": "I’ll make amends for it when I’m sure.’ He can then take part in the observance-day procedure by listening to the recitation of the Monastic Code. You shouldn’t allow this to create an obstacle to the doing of the observance-day procedure.” ",
+  "pli-tv-kd2:27.2.4": "I’ll make amends for it when I’m sure.’ He can then take part in the observance-day procedure and listen to the recitation of the Monastic Code. This is not an obstacle to doing the observance-day procedure.” ",
   "pli-tv-kd2:27.3.1": "On one occasion the monks from the group of six confessed shared offenses to one another. ",
   "pli-tv-kd2:27.3.3": "“You should not confess shared offenses to one another. ",
   "pli-tv-kd2:27.3.4": "If you do, you commit an offense of wrong conduct.” ",
