Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -859,10 +859,10 @@
   "pli-tv-kd2:27.4.9": "He should say to a monk sitting next to him, ",
   "pli-tv-kd2:27.4.10": "ʻI’ve committed such-and-such an offense. ",
   "pli-tv-kd2:27.4.11": "Once this meeting is finished, I’ll make amends for it.’ They can then continue the observance-day procedure and listen to the recitation of the Monastic Code. This is not an obstacle to doing the observance-day procedure. ",
-  "pli-tv-kd2:27.5.1": "It may happen, while the Monastic Code is being recited, that a monk becomes unsure if he’s committed an offense. ",
+  "pli-tv-kd2:27.5.1": "It may be that a monk becomes unsure if he’s committed an offense while the Monastic Code is being recited. ",
   "pli-tv-kd2:27.5.2": "He should say to a monk sitting next to him, ",
   "pli-tv-kd2:27.5.3": "ʻI’m unsure if I’ve committed such-and-such an offense. ",
-  "pli-tv-kd2:27.5.4": "I’ll make amends for it when I’m sure.’ They can then continue the observance-day procedure by listening to the recitation of the Monastic Code. ",
+  "pli-tv-kd2:27.5.4": "I’ll make amends for it when I’m sure.’ They can then continue the observance-day procedure and listen to the recitation of the Monastic Code. ",
   "pli-tv-kd2:27.5.5": "You shouldn’t allow this to create an obstacle to the doing of the observance-day procedure.” ",
   "pli-tv-kd2:27.6.0": "27. The process for making amends for a shared offense ",
   "pli-tv-kd2:27.6.1": "At one time on the observance day, the whole sangha in a certain monastery had committed the same offense. ",
