Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -341,7 +341,7 @@
   "pli-tv-kd4:6.1.5": "And I’ve committed an offense. ",
   "pli-tv-kd4:6.1.6": "So what should I do?” ",
   "pli-tv-kd4:6.1.7": "They told the Buddha. ",
-  "pli-tv-kd4:6.1.8": "“On the invitation day it may happen that a monk has committed an offense. ",
+  "pli-tv-kd4:6.1.8": "“On the invitation day It may be that a monk has committed an offense. ",
   "pli-tv-kd4:6.1.9": "He should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd4:6.1.10": "ʻI have committed such-and-such an offense. I confess it.’ ",
   "pli-tv-kd4:6.1.11": "The other should say, ",
