Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -348,7 +348,7 @@
   "pli-tv-kd4:6.1.12": "‘Do you recognize the offense?’ —",
   "pli-tv-kd4:6.1.13": "‘Yes, I recognize it.’ —",
   "pli-tv-kd4:6.1.14": "‘You should restrain yourself in the future.’ ",
-  "pli-tv-kd4:6.1.15": "On the invitation day it may happen that a monk is unsure if he’s committed an offense. ",
+  "pli-tv-kd4:6.1.15": "On the invitation day It may be that a monk is unsure if he’s committed an offense. ",
   "pli-tv-kd4:6.1.16": "He should approach a single monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd4:6.1.17": "ʻI’m unsure if I’ve committed such-and-such an offense. ",
   "pli-tv-kd4:6.1.18": "I will make amends for it when I’m sure.’ They can then do the invitation procedure. ",
