Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -378,7 +378,7 @@
   "pli-tv-kd4:6.3.9": "that one shouldn’t confess or receive the confession of shared offenses. ",
   "pli-tv-kd4:6.3.10": "But here the whole sangha has committed the same offense. ",
   "pli-tv-kd4:6.3.11": "So what should we do?” ",
-  "pli-tv-kd4:6.3.13": "“On the invitation day it may happen that the whole sangha in a certain monastery has committed the same offense. ",
+  "pli-tv-kd4:6.3.13": "“On the invitation day It may be that the whole sangha in a certain monastery has committed the same offense. ",
   "pli-tv-kd4:6.3.14": "Those monks should straightaway send one monk to a neighboring monastery: ",
   "pli-tv-kd4:6.3.15": "ʻGo and make amends for this offense. When you return, we’ll make amends for it in your presence.’ ",
   "pli-tv-kd4:6.3.16": "If he’s able to do so, it’s good. ",
