Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -386,7 +386,7 @@
   "pli-tv-kd3:6.21.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.21.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
   "pli-tv-kd3:6.21.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.22.1": "It may happen that a trainee nun becomes discontent with the spiritual life, ",
+  "pli-tv-kd3:6.22.1": "It may be that a trainee nun becomes discontent with the spiritual life, ",
   "pli-tv-kd3:6.22.2": "becomes anxious, ",
   "pli-tv-kd3:6.22.3": "has a wrong view, ",
   "pli-tv-kd3:6.22.4": "or has failed in the training, ",
