Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -523,7 +523,7 @@
   "pli-tv-kd4:8.2.5": "During the procedure an equal number of resident monks arrive. ",
   "pli-tv-kd4:8.2.6": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:8.2.7": "And there’s an offense of wrong conduct for those who already have invited. ",
-  "pli-tv-kd4:8.2.8": "On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:8.2.8": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:8.2.9": "They know ",
   "pli-tv-kd4:8.2.10": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:8.2.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the invitation procedure. ",
