Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -774,7 +774,7 @@
   "pli-tv-kd4:13.1.18": "If the number of newly arrived monks is greater, they may, if they’re willing, do the invitation procedure with the resident monks. ",
   "pli-tv-kd4:13.1.19": "Otherwise the resident monks should go outside the monastery zone and do the invitation procedure there. ",
   "pli-tv-kd4:13.1.20.0": "16. The seeing of characteristics, etc. ",
-  "pli-tv-kd4:13.1.20.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches have been made up, water for drinking and water for washing have been put out, precincts are well-swept. ",
+  "pli-tv-kd4:13.1.20.1": "“It may be that newly arrived monks see signs and indications of resident monks: beds and benches have been made up, water for drinking and water for washing have been put out, precincts are well-swept. ",
   "pli-tv-kd4:13.1.21": "As a consequence, they think there may be resident monks there, but they’re unsure. Then—",
   "pli-tv-kd4:13.1.22": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.23": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
