Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1149,7 +1149,7 @@
   "pli-tv-kd2:31.2.29": "And there’s an offense of wrong conduct for the reciters.” ",
   "pli-tv-kd2:31.2.30": "The group of fifteen on being anxious is finished. ",
   "pli-tv-kd2:32.1.0": "32. The group of fifteen on aiming at schism ",
-  "pli-tv-kd2:32.1.1": "“On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.1.2": "They know ",
   "pli-tv-kd2:32.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.1.4": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
