Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -343,7 +343,7 @@
   "pli-tv-kd3:6.13.3": "ʻPlease come, Venerables, I’m discontent with the spiritual life.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.13.4": "ʻI’ll allay her discontent or find someone else to do it, or I’ll give her a teaching.’ ",
   "pli-tv-kd3:6.13.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.14.1": "It may happen that a nun becomes anxious ",
+  "pli-tv-kd3:6.14.1": "It may be that a nun becomes anxious ",
   "pli-tv-kd3:6.14.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.14.3": "ʻPlease come, Venerables, I’m anxious.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.14.4": "ʻI’ll dispel her anxiety or find someone else to do it, or I’ll give her a teaching.’ ",
