Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -374,7 +374,7 @@
   "pli-tv-kd3:6.19.4": "ʻPlease come, Venerables, the Sangha wants to do a legal procedure against me.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.19.5": "ʻHow may the Sangha not do the procedure or make it lighter?’ ",
   "pli-tv-kd3:6.19.6": "But you should return within seven days. ",
-  "pli-tv-kd3:6.20.1": "Or it may happen that the Sangha has done a legal procedure against her—",
+  "pli-tv-kd3:6.20.1": "Or it may be that the Sangha has done a legal procedure against her—",
   "pli-tv-kd3:6.20.2": "whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
   "pli-tv-kd3:6.20.3": "She sends a message to the monks: ",
   "pli-tv-kd3:6.20.4": "ʻPlease come, Venerables, the Sangha has done a legal procedure against me.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
