Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -463,7 +463,7 @@
   "pli-tv-kd3:7.5.2": "and sends a message to his brother: ",
   "pli-tv-kd3:7.5.3": "ʻPlease come, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.5.4": "And you should return within seven days. ",
-  "pli-tv-kd3:7.6.1": "It may happen that a monk’s sister is sick ",
+  "pli-tv-kd3:7.6.1": "It may be that a monk’s sister is sick ",
   "pli-tv-kd3:7.6.2": "and sends a message to her brother: ",
   "pli-tv-kd3:7.6.3": "ʻPlease come, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.6.4": "And you should return within seven days. ",
