Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -471,7 +471,7 @@
   "pli-tv-kd3:7.7.2": "and sends him a message: ",
   "pli-tv-kd3:7.7.3": "ʻPlease come, Venerable, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.7.4": "And you should return within seven days. ",
-  "pli-tv-kd3:7.8.1": "It may happen that one who is staying with monks is sick ",
+  "pli-tv-kd3:7.8.1": "It may be that one who is staying with the monks is sick ",
   "pli-tv-kd3:7.8.2": "and sends them a message: ",
   "pli-tv-kd3:7.8.3": "ʻPlease come, Venerables, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.8.4": "And you should return within seven days.” ",
