Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -733,7 +733,7 @@
   "pli-tv-kd3:14.3.8": "This will affect people’s confidence …” ",
   "pli-tv-kd3:14.3.9": "and after rebuking him … ",
   "pli-tv-kd3:14.3.10": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd3:14.4.1": "“It may be that a monk assents to spend the first rains residence in a particular monastery. ",
+  "pli-tv-kd3:14.4.1": "“It may happen that a monk assents to spend the first rains residence in a particular monastery. ",
   "pli-tv-kd3:14.4.2": "While on his way to that monastery, he sees two monasteries with much robe-cloth. ",
   "pli-tv-kd3:14.4.3": "He thinks, ",
   "pli-tv-kd3:14.4.4": "‘Why donʼt I spend the rains residence in these two monasteries? ",
