Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -892,7 +892,7 @@
   "pli-tv-kd2:27.9.1": "“When a sangha has entered the rainy-season residence in a certain monastery, it may happen that the whole sangha has committed the same offense. ",
   "pli-tv-kd2:27.9.2": "Those monks should straightaway send a monk to a neighboring monastery: ",
   "pli-tv-kd2:27.9.3": "ʻGo and make amends for this offense. ",
-  "pli-tv-kd2:27.9.4": "When you return, we’ll make amends for it in your presence.’ ",
+  "pli-tv-kd2:27.9.4": "When you return, we’ll make amends for it with you.’ ",
   "pli-tv-kd2:27.9.5": "If he’s able to do so, it’s good. ",
   "pli-tv-kd2:27.9.6": "If he’s not, they should send one monk using the seven-day allowance: ",
   "pli-tv-kd2:27.9.7": "ʻGo and make amends for this offense. ",
