Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -497,7 +497,7 @@
   "pli-tv-kd2:17.3.17": "And they all gave the same reply. ",
   "pli-tv-kd2:17.4.3": "“When all the monks in a monastery are ignorant and incompetent, ",
   "pli-tv-kd2:17.4.4": "and none of them is able to recite the Monastic Code, ",
-  "pli-tv-kd2:17.5.1": "they should straightaway send one monk to a neighboring monastery ",
+  "pli-tv-kd2:17.5.1": "they should straightaway send a monk to a neighboring monastery ",
   "pli-tv-kd2:17.5.2": "to learn the Monastic Code, either in brief or in full.” ",
   "pli-tv-kd2:17.6.1": "The monks thought, ",
   "pli-tv-kd2:17.6.2": "“Who is responsible for sending someone?” ",
